fix: add shooting when being close to target